# json2sprite

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  IMPLEMENTATION_DETAILS.md  LICENSE.md  MANIFEST.in  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  REVERSE_QUICK_REFERENCE.md  TROUBLESHOOTING.md  compact.json  debug_compact_pretty_mode.py  debug_pretty_mode.py  json2sprite.py  pretty.json  pyproject.toml  requirements-dev.txt  setup.py  setup_dev.ps1  setup_dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
input/: example1.json
src/json2sprite/: __init__.py  cli.py  core.py  processor.py  py.typed  reverse.py
tests/: conftest.py  test_cli.py  test_core.py  test_init.py  test_processor.py  test_reverse.py
