# File: pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2sprite"
version = "0.5.0"
description = "Bidirectional conversion between JSON sprite descriptions and PNG images"
readme = "README.md"
authors = [{ name = "Soulwax", email = "your.email@example.com" }]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = [
    "sprite",
    "pixel-art",
    "graphics",
    "spritesheet",
    "game-development",
    "png",
    "json",
]
requires-python = ">=3.8"
dependencies = ["pillow>=10.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "pylint>=2.17.0",
    "mypy>=1.4.0",
    "types-Pillow>=10.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/soulwax/json2sprite"
Repository = "https://github.com/soulwax/json2sprite"
"Bug Tracker" = "https://github.com/soulwax/json2sprite/issues"
Documentation = "https://github.com/soulwax/json2sprite#readme"
Changelog = "https://github.com/soulwax/json2sprite/blob/main/CHANGELOG.md"

[project.scripts]
json2sprite = "json2sprite.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["json2sprite*"]
namespaces = false

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
)/
'''

line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103", # Invalid name
    "R0913", # Too many arguments
    "R0801", # Similar lines
    "R0912", # Too many branches
]

[tool.pylint.main]
ignore-paths = ["^tests/.*$"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=json2sprite --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "src"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
